Fix some problem on mobile

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,7 @@
 
         @include sm {
           padding: 0;
+          margin: 24px 8px;
         }
       }
     }
